@@ -85,6 +85,7 @@ samples_sources = [
   "$_samplecode/SampleTextBox.cpp",
   "$_samplecode/SampleTextEffects.cpp",
   "$_samplecode/SampleTextureDomain.cpp",
+  "$_samplecode/SampleTextureUpload.cpp",
   "$_samplecode/SampleThinAA.cpp",
   "$_samplecode/SampleUnpremul.cpp",
   "$_samplecode/SampleVertices.cpp",
